double border fix

--- a/css/main.css
+++ b/css/main.css
@@ -440,7 +440,6 @@ span.smallCaps {
   width: 7rem;
   height: 7rem;
   padding: 0.77rem;
-  border: 1px solid hsl(207deg, 61%, 20%);
   box-shadow: 0px 0px 0px 1px hsl(207deg, 61%, 20%);
   border-radius: 50%;
   color: hsl(207deg, 61%, 20%);
@@ -487,7 +486,6 @@ span.smallCaps {
   width: 7rem;
   height: 7rem;
   padding: 0.77rem;
-  border: 1px solid hsl(207deg, 61%, 20%);
   box-shadow: 0px 0px 0px 1px hsl(207deg, 61%, 20%);
   border-radius: 50%;
   color: hsl(207deg, 61%, 20%);
@@ -535,7 +533,6 @@ span.smallCaps {
   width: 7rem;
   height: 7rem;
   padding: 0.77rem;
-  border: 1px solid hsl(207deg, 61%, 20%);
   box-shadow: 0px 0px 0px 1px hsl(207deg, 61%, 20%);
   border-radius: 50%;
   color: hsl(207deg, 61%, 20%);
@@ -583,7 +580,6 @@ span.smallCaps {
   width: 7rem;
   height: 7rem;
   padding: 0.77rem;
-  border: 1px solid hsl(207deg, 61%, 20%);
   box-shadow: 0px 0px 0px 1px hsl(207deg, 61%, 20%);
   border-radius: 50%;
   color: hsl(207deg, 61%, 20%);
@@ -631,7 +627,6 @@ span.smallCaps {
   width: 7rem;
   height: 7rem;
   padding: 0.77rem;
-  border: 1px solid hsl(207deg, 61%, 20%);
   box-shadow: 0px 0px 0px 1px hsl(207deg, 61%, 20%);
   border-radius: 50%;
   color: hsl(207deg, 61%, 20%);
@@ -679,7 +674,6 @@ span.smallCaps {
   width: 7rem;
   height: 7rem;
   padding: 0.77rem;
-  border: 1px solid hsl(207deg, 61%, 20%);
   box-shadow: 0px 0px 0px 1px hsl(207deg, 61%, 20%);
   border-radius: 50%;
   color: hsl(207deg, 61%, 20%);
@@ -727,7 +721,6 @@ span.smallCaps {
   width: 7rem;
   height: 7rem;
   padding: 0.77rem;
-  border: 1px solid hsl(207deg, 61%, 20%);
   box-shadow: 0px 0px 0px 1px hsl(207deg, 61%, 20%);
   border-radius: 50%;
   color: hsl(207deg, 61%, 20%);
@@ -777,7 +770,6 @@ span.smallCaps {
   width: 7rem;
   height: 7rem;
   padding: 0.77rem;
-  border: 1px solid hsl(207deg, 61%, 20%);
   box-shadow: 0px 0px 0px 1px hsl(207deg, 61%, 20%);
   border-radius: 50%;
   color: hsl(207deg, 61%, 20%);
@@ -827,7 +819,6 @@ span.smallCaps {
   width: 7rem;
   height: 7rem;
   padding: 0.77rem;
-  border: 1px solid hsl(207deg, 61%, 20%);
   box-shadow: 0px 0px 0px 1px hsl(207deg, 61%, 20%);
   border-radius: 50%;
   color: hsl(207deg, 61%, 20%);
@@ -877,7 +868,6 @@ span.smallCaps {
   width: 7rem;
   height: 7rem;
   padding: 0.77rem;
-  border: 1px solid hsl(207deg, 61%, 20%);
   box-shadow: 0px 0px 0px 1px hsl(207deg, 61%, 20%);
   border-radius: 50%;
   color: hsl(207deg, 61%, 20%);
@@ -927,7 +917,6 @@ span.smallCaps {
   width: 7rem;
   height: 7rem;
   padding: 0.77rem;
-  border: 1px solid hsl(207deg, 61%, 20%);
   box-shadow: 0px 0px 0px 1px hsl(207deg, 61%, 20%);
   border-radius: 50%;
   color: hsl(207deg, 61%, 20%);
@@ -977,7 +966,6 @@ span.smallCaps {
   width: 7rem;
   height: 7rem;
   padding: 0.77rem;
-  border: 1px solid hsl(207deg, 61%, 20%);
   box-shadow: 0px 0px 0px 1px hsl(207deg, 61%, 20%);
   border-radius: 50%;
   color: hsl(207deg, 61%, 20%);
@@ -1029,7 +1017,6 @@ span.smallCaps {
   width: 7rem;
   height: 7rem;
   padding: 0.77rem;
-  border: 1px solid hsl(207deg, 61%, 20%);
   box-shadow: 0px 0px 0px 1px hsl(207deg, 61%, 20%);
   border-radius: 50%;
   color: hsl(207deg, 61%, 20%);
@@ -1081,7 +1068,6 @@ span.smallCaps {
   width: 7rem;
   height: 7rem;
   padding: 0.77rem;
-  border: 1px solid hsl(207deg, 61%, 20%);
   box-shadow: 0px 0px 0px 1px hsl(207deg, 61%, 20%);
   border-radius: 50%;
   color: hsl(207deg, 61%, 20%);
@@ -1133,7 +1119,6 @@ span.smallCaps {
   width: 7rem;
   height: 7rem;
   padding: 0.77rem;
-  border: 1px solid hsl(207deg, 61%, 20%);
   box-shadow: 0px 0px 0px 1px hsl(207deg, 61%, 20%);
   border-radius: 50%;
   color: hsl(207deg, 61%, 20%);
@@ -1185,7 +1170,6 @@ span.smallCaps {
   width: 7rem;
   height: 7rem;
   padding: 0.77rem;
-  border: 1px solid hsl(207deg, 61%, 20%);
   box-shadow: 0px 0px 0px 1px hsl(207deg, 61%, 20%);
   border-radius: 50%;
   color: hsl(207deg, 61%, 20%);
@@ -1237,7 +1221,6 @@ span.smallCaps {
   width: 7rem;
   height: 7rem;
   padding: 0.77rem;
-  border: 1px solid hsl(207deg, 61%, 20%);
   box-shadow: 0px 0px 0px 1px hsl(207deg, 61%, 20%);
   border-radius: 50%;
   color: hsl(207deg, 61%, 20%);
@@ -1291,7 +1274,6 @@ span.smallCaps {
   width: 7rem;
   height: 7rem;
   padding: 0.77rem;
-  border: 1px solid hsl(207deg, 61%, 20%);
   box-shadow: 0px 0px 0px 1px hsl(207deg, 61%, 20%);
   border-radius: 50%;
   color: hsl(207deg, 61%, 20%);
@@ -1345,7 +1327,6 @@ span.smallCaps {
   width: 7rem;
   height: 7rem;
   padding: 0.77rem;
-  border: 1px solid hsl(207deg, 61%, 20%);
   box-shadow: 0px 0px 0px 1px hsl(207deg, 61%, 20%);
   border-radius: 50%;
   color: hsl(207deg, 61%, 20%);
@@ -1399,7 +1380,6 @@ span.smallCaps {
   width: 7rem;
   height: 7rem;
   padding: 0.77rem;
-  border: 1px solid hsl(207deg, 61%, 20%);
   box-shadow: 0px 0px 0px 1px hsl(207deg, 61%, 20%);
   border-radius: 50%;
   color: hsl(207deg, 61%, 20%);
@@ -1453,7 +1433,6 @@ span.smallCaps {
   width: 7rem;
   height: 7rem;
   padding: 0.77rem;
-  border: 1px solid hsl(207deg, 61%, 20%);
   box-shadow: 0px 0px 0px 1px hsl(207deg, 61%, 20%);
   border-radius: 50%;
   color: hsl(207deg, 61%, 20%);
