--- a/scss/utils/_skill-graphs.scss
+++ b/scss/utils/_skill-graphs.scss
@@ -19,7 +19,6 @@
         width: $size;
         height: $size;
         padding: calc($size*0.11);
-        border: 1px solid $fg-color;
         -webkit-box-shadow: 0px 0px 0px 1px $fg-color;
         -moz-box-shadow: 0px 0px 0px 1px $fg-color;
         box-shadow: 0px 0px 0px 1px $fg-color;
